refactor(metrics): create metricsrepository